# jump

./: Cargo.toml  README.md
assets/texture/: jump_spritesheet.ron
config/: bindings.ron  config.ron  display.ron
src/: config.rs  jump.rs  main.rs  pong.rs  systems.rs
src/systems/: animation.rs  collision.rs  facing.rs  movement.rs  progress.rs
