[package]
name = "jump"
version = "0.1.0"
authors = ["Daniel Howlett <dan@dancras.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezing = "0.2"
serde = "1.0.106"

[dependencies.amethyst]
version = "0.15"
features = ["metal"]
